Fixed layout issue, font style, links
- Adjust navigation layout
- Add new font style
- Add path value to links

--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -1,1 +1,2 @@
 $primary-blue: #0965c2;
+$hover--primary-blue: #0965c219;
