--- a/src/assets/styles/base/base.scss
+++ b/src/assets/styles/base/base.scss
@@ -1,10 +1,12 @@
 @use './variables' as variables;
-
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
   padding: 0;
   margin: 0%;
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Prompt', sans-serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
 .dark {
@@ -20,3 +22,8 @@ a {
   text-decoration: none !important;
   color: variables.$primary-blue !important;
 }
+
+a:hover {
+  cursor: pointer;
+}
+
